log
Thu, Mar 27, 2025  5:20:43 PM: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Thu, Mar 27, 2025  5:25:08 PM: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c:18:1: error: useless storage class specifier in empty declaration [-Werror]
 };
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
147394a
